k8s/traefik-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: traefik-v2
spec:
  type: NodePort
  ports:
    - port: 8000
      targetPort: 8000
      nodePort: 30000  # You can specify a port in the range of 30000-32767
  selector:
    app.kubernetes.io/name: traefik
